# annalise

./: .gitignore  annalise.cabal  hie.yaml  stack.yaml
app/: Main.hs
src/: Annalise.hs  TH.hs  Types.hs
src/Brick/Widgets/: Chess.hs  HaskellEditor.hs
src/Control/Lens/TH/: Suffix.hs
src/Data/Tree/: NonEmpty.hs
